# aoc

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/2022/: day-01.rs
src/2023/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs
src/2024/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs
