[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "2022-day-01"
path = "src/2022/day-01.rs"

[[bin]]
name = "2023-day-01"
path = "src/2023/day-01.rs"

[[bin]]
name = "2023-day-02"
path = "src/2023/day-02.rs"

[[bin]]
name = "2023-day-03"
path = "src/2023/day-03.rs"

[dependencies]
anyhow = "1.0.79"
ndarray = "0.15.6"
regex = "1.10.3"
