[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "2022-day-01"
path = "src/2022/day-01.rs"

[[bin]]
name = "2023-day-01"
path = "src/2023/day-01.rs"

[[bin]]
name = "2023-day-02"
path = "src/2023/day-02.rs"

[[bin]]
name = "2023-day-03"
path = "src/2023/day-03.rs"

[[bin]]
name = "2023-day-04"
path = "src/2023/day-04.rs"

[[bin]]
name = "2023-day-05"
path = "src/2023/day-05.rs"

[[bin]]
name = "2024-day-01"
path = "src/2024/day-01.rs"

[[bin]]
name = "2024-day-02"
path = "src/2024/day-02.rs"

[[bin]]
name = "2024-day-03"
path = "src/2024/day-03.rs"

[[bin]]
name = "2024-day-04"
path = "src/2024/day-04.rs"

[[bin]]
name = "2024-day-05"
path = "src/2024/day-05.rs"

[[bin]]
name = "2024-day-06"
path = "src/2024/day-06.rs"

[dependencies]
anyhow = "1.0.79"
regex = "1.10.3"
